about page, contact page, begin gallery

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -11,6 +11,8 @@ PageList:
   ready: 90
 - file:  4-1-agency-models.html
   ready: 90
+- file:  4-2-partners.html
+  ready: 90
 - file:  5-0-gallery.html
   ready: 75
 - file:  5-1-gallery-news.html
