--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-formatter-pretty": "^1.3.0",
     "eslint-loader": "^1.9.0",
+    "gsap": "^1.20.3",
     "gulp": "^3.9.1",
     "gulp-cached": "^1.1.1",
     "gulp-cheerio": "^0.6.2",
