--- a/src/index.yaml
+++ b/src/index.yaml
@@ -4,9 +4,9 @@ PageList:
 - file: home.html
   ready: 97
 - file: 2-0-models.html
-  ready: 75
+  ready: 99
 - file: 3-0-inner.html
-  ready: 58
+  ready: 99
 - file:  4-0-agency.html
   ready: 90
 - file:  4-1-agency-models.html
@@ -14,7 +14,7 @@ PageList:
 - file:  4-2-partners.html
   ready: 90
 - file:  5-0-gallery.html
-  ready: 75
+  ready: 99
 - file:  5-1-gallery-news.html
   ready: 90
 - file:  6-0-contacts.html
@@ -27,3 +27,5 @@ PageList:
   ready: 100
 - file: ui.html
   ready: 100
+- file: 8-0-social.html
+  ready: 30
